[gd_scene load_steps=8 format=3 uid="uid://gdg15rvllixu"]

[ext_resource type="Texture2D" uid="uid://cocm3yhxj03wo" path="res://assets/icons/user.svg" id="1_fx1tq"]
[ext_resource type="FontFile" uid="uid://byphkn3yqgafd" path="res://assets/fonts/font_card_title.tres" id="1_txqp0"]
[ext_resource type="Script" path="res://script/boards.gd" id="1_w7y32"]
[ext_resource type="StyleBox" path="res://assets/style_board_card_button.tres" id="3_kecpn"]
[ext_resource type="FontFile" path="res://assets/fonts/font_regular.tres" id="3_tp20a"]
[ext_resource type="StyleBox" path="res://assets/style_board_card_button_hover.tres" id="4_4vi3q"]
[ext_resource type="Texture2D" uid="uid://bbtybcsltnven" path="res://assets/icons/users.svg" id="6_vm0or"]

[node name="Boards" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_w7y32")

[node name="MarginContainer" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
offset_left = 123.0
offset_top = 1.0
offset_right = 423.0
offset_bottom = 265.0

[node name="HSpacer" type="HBoxContainer" parent="MarginContainer/BoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/BoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/BoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_fx1tq")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/BoxContainer/HBoxContainer"]
self_modulate = Color(0.0901961, 0.168627, 0.301961, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_txqp0")
theme_override_font_sizes/font_size = 24
text = "Personal Boards"

[node name="HSpacer2" type="HBoxContainer" parent="MarginContainer/BoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="PersonalBoardsContainer" type="GridContainer" parent="MarginContainer/BoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="Button" type="Button" parent="MarginContainer/BoxContainer/PersonalBoardsContainer"]
clip_contents = true
custom_minimum_size = Vector2(170, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.941176, 0.94902, 0.960784, 1)
theme_override_colors/font_hover_color = Color(0.0901961, 0.168627, 0.301961, 1)
theme_override_fonts/font = ExtResource("3_tp20a")
theme_override_styles/normal = ExtResource("3_kecpn")
theme_override_styles/hover = ExtResource("4_4vi3q")
theme_override_styles/pressed = ExtResource("4_4vi3q")
theme_override_styles/disabled = ExtResource("4_4vi3q")
theme_override_styles/focus = ExtResource("4_4vi3q")
text = "Create new board"
clip_text = true

[node name="HSpacer3" type="HBoxContainer" parent="MarginContainer/BoxContainer"]
custom_minimum_size = Vector2(20, 30)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/BoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/BoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("6_vm0or")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/BoxContainer/HBoxContainer2"]
self_modulate = Color(0.0901961, 0.168627, 0.301961, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_txqp0")
theme_override_font_sizes/font_size = 24
text = "Shared Boards"

[connection signal="pressed" from="MarginContainer/BoxContainer/PersonalBoardsContainer/Button" to="." method="_on_CreateBoard_pressed"]
